feat: 插件参数修改
